validator_derive_tests/tests/compile-fail/no_nested_validations.stderr
error[E0599]: the method `validate` exists for reference `&Nested`, but its trait bounds were not satisfied
 --> tests/compile-fail/no_nested_validations.rs:3:10
  |
3 | #[derive(Validate)]
  |          ^^^^^^^^ method cannot be called on `&Nested` due to unsatisfied trait bounds
...
9 | struct Nested {
  | ------------- doesn't satisfy `Nested: Validate`
  |
  = note: the following trait bounds were not satisfied:
          `Nested: Validate`
          which is required by `&Nested: Validate`
note: the trait `Validate` must be implemented
 --> $WORKSPACE/validator/src/traits.rs
  |
  | pub trait Validate {
  | ^^^^^^^^^^^^^^^^^^
  = help: items from traits can only be used if the trait is implemented and in scope
  = note: the following trait defines an item `validate`, perhaps you need to implement it:
          candidate #1: `Validate`
  = note: this error originates in the derive macro `Validate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Nested: Constraints` is not satisfied
 --> tests/compile-fail/no_nested_validations.rs:6:13
  |
6 |     nested: Nested,
  |             ^^^^^^ the trait `Constraints` is not implemented for `Nested`
  |
  = help: the following other types implement trait `Constraints`:
            Test
            HashMap<K, V, S>
            indexmap::map::IndexMap<K, V>
            BTreeMap<K, V>
            HashSet<V, S>
            indexmap::set::IndexSet<V>
            BTreeSet<T>
            Vec<T>
          and $N others
